tmux: style search indicator, allow direct when COLORTERM set

--- a/tmux.conf
+++ b/tmux.conf
@@ -4,12 +4,6 @@ set -g set-titles on
 # pane_title captures the xterm escape sent by the shell; rest is noise
 set -g set-titles-string "#{pane_title}"
 
-# host/root colour, 19 is selection background
-set -g status-style bg="${HL_NAME}",fg=black
-if-shell -b '[ "${COLORTERM}" = "truecolor" ]' {
-	set -g status-style fg="bright${HL_NAME}",bg=color19
-}
-
 # just the title, the rest is truncated noise
 set -g status-format "#{pane_title}"
 
@@ -18,8 +12,17 @@ set -g status-position top
 # moar scollback
 set -g history-limit 100000
 
-# assume everything can handle 256color; linux falls back gracefully
+%if "#{==:#{COLORTERM},truecolor}"
+# 19 is selection background
+set -g default-terminal "tmux-direct"
+set -g status-style fg="bright${HL_NAME}",bg=color19
+set -g mode-style fg="bright${HL_NAME}",bg=color19
+%else
+# assume most can handle 256color; linux falls back gracefully
 set -g default-terminal "tmux-256color"
+set -g status-style fg=black,bg="${HL_NAME}"
+set -g mode-style fg=black,bg="${HL_NAME}"
+%endif
 
 # 24 bit color capability is not detected from alacritty
 set -g -a terminal-overrides "alacritty:RGB"
