tmux: add UH_CONT top right, stop using status-format as escaping is impossible?

--- a/tmux.conf
+++ b/tmux.conf
@@ -4,8 +4,16 @@ set -g set-titles on
 # pane_title captures the xterm escape sent by the shell; rest is noise
 set -g set-titles-string "#{pane_title}"
 
-# just the title, the rest is truncated noise
-set -g status-format "#{pane_title}"
+# not interesting
+set -g window-status-current-format ""
+
+# just the title
+set -g status-left "  #{pane_title}"
+set -g status-left-length 100
+
+# user/host who started the session
+# set -g status-right "  ${USER}@#H  "
+set -g status-right "  ${UH_CONT}  "
 
 set -g status-position top
 
@@ -17,11 +25,13 @@ set -g history-limit 100000
 set -g default-terminal "tmux-direct"
 set -g status-style fg="bright${HL_NAME}",bg=color19
 set -g mode-style fg="bright${HL_NAME}",bg=color19
+set -g status-right-style bg=color19,fg="bright${UH_CONT_HL_NAME}"
 %else
 # assume most can handle 256color; linux falls back gracefully
 set -g default-terminal "tmux-256color"
 set -g status-style fg=black,bg="${HL_NAME}"
 set -g mode-style fg=black,bg="${HL_NAME}"
+set -g status-right-style fg=black,bg="${UH_CONT_HL_NAME}"
 %endif
 
 # 24 bit color capability is not detected from alacritty
