--- a/tmux.conf
+++ b/tmux.conf
@@ -40,9 +40,10 @@ set -g -a terminal-overrides "alacritty:RGB"
 # search
 set-window-option -g wrap-search off
 
-# use screen ctrl-A prefix
+# use screen ctrl-A prefix with ctrl-O as backup when remoting
 unbind-key C-b
 set -g prefix C-a
+set -g prefix2 C-o
 
 # enter copy mode
 bind-key a copy-mode
