tmux: history and terminal clear mapping

--- a/tmux.conf
+++ b/tmux.conf
@@ -43,6 +43,11 @@ set-window-option -g wrap-search off
 # enter copy mode
 bind-key b copy-mode
 
+# clear
+bind-key c-l clear-history
+bind-key c-l clear-history \; send-keys 'clear' Enter
+bind-key -T copy-mode-vi c-l clear-history \; send-keys 'clear' Enter
+
 # vi copypasta mode
 set-window-option -g mode-keys vi
 
