tmux: allow osc52 through, print binds at startup

--- a/tmux.conf
+++ b/tmux.conf
@@ -37,22 +37,24 @@ set -g status-right-style fg=black,bg="${UH_CONT_HL_NAME}"
 # 24 bit color capability is not detected from alacritty
 set -g -a terminal-overrides "alacritty:RGB"
 
+# allways allow passthrough for osc52 etc
+set -g allow-passthrough all
+
+# use default external, it doesn't fall back gracefully when on
+# set -s set-clipboard external
+
 # search
 set-window-option -g wrap-search off
 
 # enter copy mode
 bind-key b copy-mode
 
-# clear
-bind-key c-l clear-history
-bind-key c-l clear-history \; send-keys 'clear' Enter
+# clear terminal and history
+bind-key                 c-l clear-history \; send-keys 'clear' Enter
 bind-key -T copy-mode-vi c-l clear-history \; send-keys 'clear' Enter
 
 # vi copypasta mode
 set-window-option -g mode-keys vi
-
-# scrollback
-bind-key \' send-keys -R C-l \; clear-history
 
 # more vim like selection
 bind-key -T copy-mode-vi v send-keys -X begin-selection
