vimium: openVomnibarOnNewTabPage false

--- a/config/vimium/vimium-options.yaml
+++ b/config/vimium/vimium-options.yaml
@@ -105,6 +105,7 @@ keyMappings: |-
 
   map ? showHelp
 linkHintCharacters: pgcraoeuhtnsqjkmwvz
+openVomnibarOnNewTabPage: false
 regexFindMode: true
 scrollStepSize: 30
 searchEngines: |-
